refactor: refactor BreedsScreen to use Material3 PullToRefresh
- Replaced SwipeRefresh with Material3's PullToRefresh in BreedsScreen for improved UI consistency.
- Updated string resources after merge
- Removed the unused BreedsNavigation.kt file.

--- a/feature/breeds/src/main/res/values/strings.xml
+++ b/feature/breeds/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="pet_breeds_title">Pet Breeds</string>
-    <string name="exploring_pet_breeds_cat">Exploring Cats</string>
-    <string name="exploring_pet_breeds_dog">Exploring Dogs</string>
+    <string name="exploring_cat">Exploring Cats</string>
+    <string name="exploring_dog">Exploring Dogs</string>
     <string name="search_pet_breeds_placeholder">Search %1$s breeds…</string>
     <string name="filter_content_description">Filter</string>
     <string name="no_breeds_available">No breeds available</string>
